--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Document</title>
     </head>
     <body>
-        <p>hello world</p>
+        <p>hello !</p>
 
         <script src="js/script.js"></script>
     </body>
